--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -237,7 +237,7 @@
 
     <section class="who-we-are">
         <div class="container ">
-            <div class="flex-who-we-are">
+            <div class="flex-who-we-are sticky">
                 <div class="left-images">
                     <div class="main-img">
                         <div class="main-img">
@@ -289,6 +289,9 @@
         </div>
 
     </section>
+
+
+
     <section class="hero-section">
         <div class="container" data-aos="fade-up" data-aos-duration="300">
             <div class="right-wordsendcycal abslut">
@@ -310,6 +313,8 @@
             <a routerLink="/worst-day-cycle" class="button whitebt">Learn More</a>
         </div>
     </section>
+
+
     <section class="mentor-section">
         <div class="container">
             <div class="mentor-wrapper">
@@ -353,7 +358,90 @@
         </div>
     </section>
 
-    <div class="card-section sticky">
+    <section class="who-we-are">
+        <div class="container ">
+            <div class="flex-who-we-are sticky">
+                <div class="left-images">
+                    <div class="main-img">
+                        <div class="main-img">
+                            <iframe title="YouTube video player" src="https://www.youtube.com/embed/V43JvmYUIlg"
+                                width="100%" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="right-content" data-aos="fade-up" data-aos-duration="200">
+                    <h5 class="tag-line">WHO WE ARE</h5>
+                    <h3>Sandstone Care</h3>
+                    <p>Kenny Weiss was honored and humbled when Deb from Sandstone Care‘s alcohol and drug treatment
+                        facility reached out to ask him to supply a quote for their website and blog.<br></p>
+
+                    <p>They were familiar with Kenny’s work on narcissism and had been following his content on the
+                        subject, and as they were building out their own blog on the subject, they asked Kenny to
+                        comment as a subject matter expert. The image of a quote on the Sandstone Care website is
+                        featured below.</p>
+                    <br>
+                    <p>You see, Kenny is a person who has struggled with multiple addictions and has been married to
+                        narcissists. Not only has he studied the subject, but he has also lived it. In addition, he
+                        is familiar with Sandstone’s programs as someone very close to him has been treated at that
+                        facility. He has met many of the counselors and highly recommends them if you or a loved one
+                        is struggling with an addiction. Watch Kenny’s video to hear the story.</p>
+ <div class="sandstone-logo-blk">
+                            <img src="images/sandstone-logo-blk.webp" loading="lazy" alt="">
+                        </div>
+                        <a routerLink="/book-session" class="button mt-3">BOOK A MEETING WITH KENNY</a>
+                    
+
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <section class="who-we-are">
+        <div class="container ">
+            <div class="flex-who-we-are sticky">
+               
+                <div class="right-content" data-aos="fade-up" data-aos-duration="200">
+                    <h5 class="tag-line">WHO WE ARE</h5>
+                     <h3>The Science Behind the Healing: Neurofeedback & Neuroscience</h3>
+                        <p>Kenny didn’t stop at psychology and coaching. He went deeper — into the brain itself.</p>
+                        <br>
+
+                        <p>Through neurofeedback therapy, he discovered how trauma physically rewires the brain,
+                            trapping people in cycles of stress, anxiety, and emotional reactivity.</p><br>
+
+
+                        <p>Today, Kenny integrates <b>neuroscience-backed tools</b> and <b>neurofeedback
+                                techniques</b> into his coaching — helping clients regulate their nervous systems
+                            and create change not just emotionally, but neurologically.</p><br>
+
+                        <p>It’s where <b>inner work meets brain science —</b> and the results are
+                            life-changing.</p><br>
+ 
+                        <a routerLink="/book-session" class="button mt-3">Talk to Kenny</a>
+                    
+
+                </div>
+                 <div class="left-images">
+                    <div class="main-img">
+                        <div class="main-img">
+                        <iframe title="YouTube video player" src="https://www.youtube.com/embed/m5XAN2nFBT0"
+                                width="100%" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!-- <div class="card-section sticky">
         <div class="container">
             <div class="card-row aos-init aos-animate" data-aos="fade-up" data-aos-duration="400">
                 <div class="dddd">
@@ -382,7 +470,7 @@
                     </div>
 
                     <!-----------second section------------>
-                    <div class="secondsection">
+    <!-- <div class="secondsection">
                         <h3>The Science Behind the Healing: Neurofeedback & Neuroscience</h3>
                         <p>Kenny didn’t stop at psychology and coaching. He went deeper — into the brain itself.</p>
                         <br>
@@ -415,13 +503,15 @@
                     <p>Recognizing the power of Emotional Authenticity, Sandstone Care, a nationally recognized
                         addiction recovery center, partnered with Kenny to integrate his teachings into their
                         programs.</p>
+
+                        
                 </div>
             </div>
-
-
-
+ 
         </div>
-    </div>
+    </div> -->
+
+
 
     <section class="courses-master-classes">
         <div class="course-heading" data-aos="fade-up" data-aos-duration="500">
