--- a/src/app/layout/books/books.component.html
+++ b/src/app/layout/books/books.component.html
@@ -205,6 +205,39 @@
             </div>
         </section>
 
+
+ <section class="who-we-are">
+        <div class="container ">
+            <div class="flex-who-we-are sticky">
+               
+                <div class="right-content" data-aos="fade-up" data-aos-duration="200">
+                    <h5 class="tag-line">WHO WE ARE</h5>
+                     <h3>How Emotions Are Made – Buy the Paperback or Buy the Audiobook – Lisa Feldman Barret</h3>
+                        <p>dddd</p><br>
+ 
+                        <a routerLink="/book-session" class="button mt-3">Talk to Kenny</a>
+                    
+
+                </div>
+                 <div class="left-images">
+                    <div class="main-img">
+                       <div class="about-right-img">
+                        <img class="imagedesign" src="images/mybook.webp" loading="lazy" alt="">
+
+                        
+                    </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
         <section class="recommended-readinglist" data-aos="fade-up" data-aos-duration="300">
             <div class="container">
                 <div class="contentrecommended">
