--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1553,11 +1553,21 @@ p.left-br {
     top: -42px;
     right: 0;
     color: white;
-    font-size: 55px;
+    font-size: 50px;
     cursor: pointer;
     background-color: #512570;
     padding: 10px;
+    font-weight: 300;
+    padding-top: 12px;
 }
+
+.lightbox {
+  display: none;
+}
+.lightbox.active {
+  display: block; 
+}
+ 
 
 .kannyimgg {
     overflow: hidden;
