--- a/src/app/layout/courses/courses-details/courses-details.component.html
+++ b/src/app/layout/courses/courses-details/courses-details.component.html
@@ -56,10 +56,9 @@
                            <div [innerHTML]="service.acf?.person_quote"></div>
                         </div>
 
-                       <div class="Player5">
-                        <div [innerHTML]="service.acf?.video_embed_url"></div> 
-                      
-                    </div>
+                      <div class="Player5">
+                            <iframe title="YouTube video player" src="https://player.hotmart.com/embed/WLa96km4Lk" width="100%" height="500" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                        </div>
 
                     </div>
                 </div>
@@ -127,10 +126,13 @@
                         </div> 
                         <!-- Right benefits list -->
                         <div class="right-box">
-                            <h4>{{ service.acf?.right_title}}</h4>
+                          <h4>{{ service.acf?.right_title }}</h4>
                             <ul class="benefits-list">
-                                <li>{{ service.acf?.benefits}}</li> 
+                            <li *ngFor="let benefits of service.acf?.benefits">
+                                {{ benefits }}
+                            </li>
                             </ul>
+
                         </div>
                     </div>
                 </div>
@@ -149,11 +151,14 @@
                         <div class="industry-grid">
                             <h4>{{ service.acf?.journey_right_title}}</h4>
                             <div class="industry-card">
-                                <span class="icon"><i class="fa-solid fa-play"></i></span>
+                                <!-- <span class="icon"><i class="fa-solid fa-play"></i></span> -->
                                 <div [innerHTML]="service.acf?.journey_right_title"></div> 
                                 <!-- <p>1– Introduction To Self–Love– What to Expect (1:32)</p> -->
                                 <a target="_blank"
                                     href="https://thegreatnessu.com/courses/how-to-love-and-accept-your-perfect-imperfections/lectures/33186479">Start</a>
+                                     <div class="button-row left">
+                         
+                            </div>
                             </div>
 
                             <!-- <div class="industry-card">
