--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -3,12 +3,10 @@
                         <div class="container">
                             <div class="contentallkanny">
                                 <img class="form-bac" src="images/form-bac.png">
-                                <h3>🌿 Is Childhood Trauma Quietly Controlling Your Life?</h3>
-                                <p>Even if you had a “good” childhood, small emotional wounds may still be shaping your thoughts,
-                                    reactions, and relationships today. It’s not your fault — but healing is in your hands.<br><br>
-                                    <b>👉 Take the first step</b> to uncover what’s really holding you back.
-                                </p>
-                                <a class="button" routerLink="/book-session">Start Your Healing Journey</a>
+                                <h3>{{ service.acf?.as_parent_heading }}</h3> 
+                                <div [innerHTML]="service.acf?.intro_discription"></div> 
+                              
+                                <a class="button" routerLink="/book-session">{{ service.acf?.intro_button }}</a>
 
 
                             </div>
